bpk-lib/crates/macbat/macros/tests/trybuild_negative/projection_mixed_attr_keys.rs
use macbat::Projection;
#[derive(Projection)]
#[batpak(input = JsonValueInput, event = Ev, handler = on_ev)]
struct P {
    a: u8,
}
fn main() {}
